--- a/index.html
+++ b/index.html
@@ -14,14 +14,29 @@
 
 <body class="container">
     <h1 class="text-center mt-5 fw-bolder text-secondary">Book Archive</h1>
+    <!-- input field section and button -->
     <section class="mt-5 mb-5">
-        <div class="input-group mb-3  w-25%">
-            <input type="text" class="form-control" placeholder="Book Name" aria-label="Recipient's username"
-                aria-describedby="button-addon2">
-            <button class="btn btn-dark fw-bolder" type="button" id="button-addon2">Search</button>
+        <div class="input-group mb-3">
+            <input type="text" id="input-field" class="form-control" placeholder="Book Name"
+                aria-label="Recipient's username" aria-describedby="button-addon2">
+            <button onclick="searchBook()" class="btn btn-dark fw-bolder" type="button">Search</button>
         </div>
     </section>
+    <!-- found result -->
+    <div id="found-result">
+
+    </div>
     <hr />
+
+    <!-- error massage -->
+    <div id="error">
+
+    </div>
+
+    <!-- book card -->
+    <div id="search-result" class="row row-cols-1 row-cols-md-3 g-4">
+
+    </div>
 
 
     <!-- bootstrap script -->
